# micro-rust-grpc

./: .env  .gitignore  .gitmodules  .project  Cargo.toml  README.md  service.proto
auth_micro/: Cargo.toml
auth_micro/src/: main.rs
auth_micro/src/repository/: mod.rs
grpc_serve/: Cargo.toml  build.rs
grpc_serve/src/: lib.rs
http_serve/: Cargo.toml
http_serve/src/: header.rs  lib.rs
jcore/: Cargo.toml
jcore/src/: lib.rs
migrations/2022-07-27-152236_users/: down.sql  up.sql
migrations/2022-08-02-131354_score/: down.sql  up.sql
migrations/2022-08-02-131404_time/: down.sql  up.sql
migrations/2022-08-02-131414_enquete/: down.sql  up.sql
migrations/2022-08-02-155932_enquete_content/: down.sql  up.sql
migrations/2022-08-02-182442_enquete_resultado/: down.sql  up.sql
migrations/2022-10-08-140029_auth/: down.sql  up.sql
migre/: Cargo.toml
migre/src/: lib.rs  users.rs
src/: main.rs
src/entity/: db.rs  mod.rs  schema.rs  users.rs
src/fuctions/: macros.rs  mod.rs
users/: Cargo.toml
users/src/: asy.rs  db.rs  lib.rs  repository.rs  schema.rs
users/src/entity/: db_models.rs  mod.rs
users/tests/: integration_test.rs
