[package]
name = "auth_micro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_serve = { path = "../http_serve"  }
users = { path = "../users"  }
rocket = { version = "0.5.0-rc.2", features = ["secrets","json","tls"] }
jcore = { path = "../jcore", features =["tokio","derives","json"] }
reqwest = { version = "0.11" , features = [ "json" ]}
rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger", "rapidoc"] }
schemars = { version = "0.8.6", features = ["preserve_order"] }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
base64 = "*"
