[package]
name = "jcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html





[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
uuid = { version = "1.2.0", features = ["serde", "v4"] }
chrono = "^0.4.22"
async-trait = "0.1.57"
futures = "*"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"



[features]
tokio = ["tokio/full"]
derives = []
json = []


